package de.verbund.kunden.gui.utils;

import java.util.Observable;

public class KundenObservable extends Observable {

	@Override
	public void setChanged() {
		super.setChanged();
	}
}
