@startuml
class Starter [[java:de.verbund.kunden.Starter]] {
	+{static}void main(String[] args)
}

Starter --> HauptFenster

class HauptFenster [[java:de.verbund.kunden.gui.view.HauptFenster]] {
	+HauptFenster()
	#void zeigNeu()
	+void notifyObservers()
}

class NeuController [[java:de.verbund.kunden.gui.controller.NeuController]] {
	+{static}NeuController installController(HauptFenster fenster)
	+void speichern()
}
NeuController "erzeugt" --> Kunde


HauptFenster <--> NeuController

class NeuModel [[java:de.verbund.kunden.gui.model.NeuModel]] {
	+NeuModel(NeuController neuController)
}

NeuController <--> NeuModel


class NeuView [[java:de.verbund.kunden.gui.view.NeuView]] {
	-JLabel lName
	-JTextField tfName
	-JLabel lKdNr
	-JTextField tfKdNr
	-JLabel lInfo
	-JButton bSpeicher
	+NeuView(HauptFenster hauptFenster, NeuController neuController, NeuModel neuModel)
	#void speicher()
	+void meldeOk(Long id)
	+void meldeFehler(String message)
}

NeuView <--> NeuController
NeuView *--> HauptFenster
NeuView *--> NeuModel

class KundenBD [[java:de.verbund.kunden.KundenBD]] {
   +Kunde neuerKunde(Kunde k)
}

NeuController *--> KundenBD

interface KundenVerwaltung [[java:de.verbund.kunden.service.KundenVerwaltung]] {
	Kunde neuerKunde(Kunde k)
}

KundenBD o-- KundenVerwaltung

class ServiceLocator [[java:de.verbund.kunden.ServiceLocator]] {
	+{static}KundenVerwaltung getKundenVerwaltung()
}
KundenBD --> ServiceLocator

ServiceLocator --> KundenVerwaltung
ServiceLocator --> KundenVerwaltungDummyImpl

class KundenVerwaltungDummyImpl [[java:de.verbund.kunden.service.KundenVerwaltungDummyImpl]] {
	Kunde neuerKunde(Kunde k)
}
KundenVerwaltung <|.. KundenVerwaltungDummyImpl


class Kunde [[java:de.verbund.kunden.dto.Kunde]] {
	-Long id
	-String name
	-String kdNr
}

class KundenObservable [[java:de.verbund.kunden.gui.utils.KundenObservable]] {
	+void setChanged()
}
class Observable [[java:java.util.Observable]] {
}
Observable <|-- KundenObservable

HauptFenster *--> KundenObservable
@enduml